# bookstore

./: .gitignore  AUTENTICACAO_VERIFICACAO.md  AUTHENTICATION_SETUP.md  Dockerfile  PR_NOTES.md  README.md  clear  db.sqlite3  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
bookstore/: auth_views.py  authentication.py  settings.py  urls.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/: test_order_viewset.py  test_serializers.py  test_viewsets.py
order/viewsets/: order_viewset.py
product/: admin.py  factories.py  urls.py
product/migrations/: 0001_initial.py
product/serializers/: product_serializer.py
product/tests/: test_category_viewset.py  test_product_viewset.py  test_serializers.py
product/viewsets/: category_viewset.py  product_viewset.py
